fix horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
 *{
 margin: 0;
- 
+ box-sizing: border-box;
 }
 body{
     font-family: 'Inter', sans-serif;
+}
+html, body {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
